# $Id$

2007-05-08	Ivan Y. Khvostishkov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: default postfix.

2007-05-08	Konstantin V. Arkhipov

	* core/Exceptions/ClassNotFoundException.class.php,
	global.inc.php.tpl: classes paths cache implemented; now throws
	ClassNotFoundException instead of fatal error when unable to find
	requested class.

2007-05-08	Anton E. Lebedevich

	* core/Form/Filters/RemoveNewlineFilter.class.php: RemoveNewlineFilter
	added.

2007-05-05	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added ability to set
	View class.

2007-05-02	Anton E. Lebedevich

	* main/Flow/PartViewer.class.php: getModel() added.

2007-04-28	Dmitry Pismenny

	* core/Form/Filters/PCREFilter.class.php: limit added.

2007-04-27	Dmitry Pismenny

	* core/base/Session.class.php: minor styling.

	* core/base/Session.class.php: add getName() and getId() methods.

2007-04-22	Konstantin V. Arkhipov

	* meta/bin/build.php: --no-color switch implemented.

2007-04-23	Anton E. Lebedevich

	* main/Utils/DebugUtils.class.php: memory counting functions added.

2007-04-22	Konstantin V. Arkhipov

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-04-21	Konstantin V. Arkhipov

	* main/Flow/HttpRequest.class.php: getAttachedList() removed.

	* core/Cache/ReferencePool.class.php: removed.

	* main/Criteria/Criteria.class.php: added dao-like behaviour on
	throwing ONF-exception controlled by setSilent() method; silent by
	default.

	* meta/builders/AutoClassBuilder.class.php: __sleep()'s generation
	dropped.

	* main/DAOs/: partial caching implemented for objects fetched by
	cascade strategy; useless getListByCriteria() dropped.

	* main/DAOs/GenericDAO.class.php: getById() now stores cached objects
	in identity map.

2007-04-19	Konstantin V. Arkhipov

	* main/Base/, core/Form/: quasi non-plain Form implemented.

	* core/Form/Primitives/PrimitivesBox.class.php: removed.

2007-04-18	Konstantin V. Arkhipov
